[package]
name = "short-url"
version = "0.1.0"
authors = ["demonic <demonic@csie.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.5"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.6"
futures = "0.3.4"
env_logger = "0.7.1"
bytes = "0.5.4"
serde = "1.0.106"
serde_json = "1.0.51"
json = "0.12.4"
